<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paypal_saved_payment_method_style_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/paypal_saved_payment_method_style_show_logo_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:checked="true"
            android:text="@string/paypal_saved_payment_method_style_show_logo" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/paypal_saved_payment_method_style_show_label_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="true"
            android:text="@string/paypal_saved_payment_method_style_show_label" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/paypal_saved_payment_method_style_show_credit_messaging_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="true"
            android:text="@string/paypal_saved_payment_method_style_show_credit_messaging" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/paypal_saved_payment_method_style_corner_radius_input"
            android:text="@string/paypal_saved_payment_method_style_corner_radius_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/paypal_saved_payment_method_style_corner_radius_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/paypal_saved_payment_method_style_border_width_input"
            android:text="@string/paypal_saved_payment_method_style_border_width_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/paypal_saved_payment_method_style_border_width_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/paypal_saved_payment_method_style_border_color_label"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:id="@+id/paypal_saved_payment_method_style_border_color_preview"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/paypal_saved_payment_method_style_border_color_pick_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/paypal_saved_payment_method_style_pick_color" />

            <CheckBox
                android:id="@+id/paypal_saved_payment_method_style_border_color_default_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:checked="true"
                android:text="@string/paypal_saved_payment_method_style_use_default" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/paypal_saved_payment_method_style_height_input"
            android:text="@string/paypal_saved_payment_method_style_height_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/paypal_saved_payment_method_style_height_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/paypal_saved_payment_method_style_horizontal_padding_input"
            android:text="@string/paypal_saved_payment_method_style_horizontal_padding_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/paypal_saved_payment_method_style_horizontal_padding_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/paypal_saved_payment_method_style_vertical_padding_input"
            android:text="@string/paypal_saved_payment_method_style_vertical_padding_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/paypal_saved_payment_method_style_vertical_padding_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/paypal_saved_payment_method_style_background_color_label"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:id="@+id/paypal_saved_payment_method_style_background_color_preview"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/paypal_saved_payment_method_style_background_color_pick_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/paypal_saved_payment_method_style_pick_color" />

            <CheckBox
                android:id="@+id/paypal_saved_payment_method_style_background_color_default_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:checked="true"
                android:text="@string/paypal_saved_payment_method_style_use_default" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/paypal_saved_payment_method_style_text_color_label"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:id="@+id/paypal_saved_payment_method_style_text_color_preview"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/paypal_saved_payment_method_style_text_color_pick_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/paypal_saved_payment_method_style_pick_color" />

            <CheckBox
                android:id="@+id/paypal_saved_payment_method_style_text_color_default_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:checked="true"
                android:text="@string/paypal_saved_payment_method_style_use_default" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/paypal_saved_payment_method_style_base_font_size_input"
            android:text="@string/paypal_saved_payment_method_style_base_font_size_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/paypal_saved_payment_method_style_base_font_size_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/paypal_saved_payment_method_style_logo_width_input"
            android:text="@string/paypal_saved_payment_method_style_logo_width_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/paypal_saved_payment_method_style_logo_width_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/paypal_saved_payment_method_style_label_font_size_input"
            android:text="@string/paypal_saved_payment_method_style_label_font_size_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/paypal_saved_payment_method_style_label_font_size_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/paypal_saved_payment_method_style_label_margin_start_input"
            android:text="@string/paypal_saved_payment_method_style_label_margin_start_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/paypal_saved_payment_method_style_label_margin_start_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/paypal_saved_payment_method_style_fi_text_font_size_input"
            android:text="@string/paypal_saved_payment_method_style_fi_text_font_size_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/paypal_saved_payment_method_style_fi_text_font_size_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/paypal_saved_payment_method_style_edit_icon_size_input"
            android:text="@string/paypal_saved_payment_method_style_edit_icon_size_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/paypal_saved_payment_method_style_edit_icon_size_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/paypal_saved_payment_method_style_fi_margin_start_input"
            android:text="@string/paypal_saved_payment_method_style_fi_margin_start_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/paypal_saved_payment_method_style_fi_margin_start_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/paypal_saved_payment_method_style_credit_messaging_font_size_input"
            android:text="@string/paypal_saved_payment_method_style_credit_messaging_font_size_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/paypal_saved_payment_method_style_credit_messaging_font_size_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/paypal_saved_payment_method_style_credit_messaging_link_color_label"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:id="@+id/paypal_saved_payment_method_style_credit_messaging_link_color_preview"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/paypal_saved_payment_method_style_credit_messaging_link_color_pick_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/paypal_saved_payment_method_style_pick_color" />

            <CheckBox
                android:id="@+id/paypal_saved_payment_method_style_credit_messaging_link_color_default_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:checked="true"
                android:text="@string/paypal_saved_payment_method_style_use_default" />
        </LinearLayout>

        <Button
            android:id="@+id/paypal_saved_payment_method_style_apply_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/paypal_saved_payment_method_style_apply_button" />

    </LinearLayout>
</ScrollView>
